--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!-->
 <html lang="en">
@@ -299,6 +299,7 @@
 				<div class="col-sm-4">
 				<P STYLE="text-align: center;"><h3>Lagere school</h3></p>
 				<P STYLE="text-align: center;">Samen met Ward A. kregen we de opdracht om de leerkrachten van de lagere school bij te schaven in het gebruik van het Smartboard. Dit werd meteen al een heel erg uitdagende opdracht aangezien we zelf niet beschikte over het soort Smartboards die men gebruikten.</p>
+				<iframe width="560" height="315" src="//www.youtube.com/embed/NiQZ9h77Cmo" frameborder="0" allowfullscreen></iframe>
 				</div>
 				<div class="col-sm-4">
 				<P STYLE="text-align: center;"><h3>Inleiding</h3></p>
