--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 				<P STYLE="text-align: center;"><h3>Lagere school</h3></p>
 				<P STYLE="text-align: center;">Samen met Ward A. kregen we de opdracht om de leerkrachten van de lagere school bij te schaven in het gebruik van het Smartboard. Dit werd meteen al een heel erg uitdagende opdracht aangezien we zelf niet beschikte over het soort Smartboards die men gebruikten.</p>
 					<div class="embed-responsive embed-responsive-16by9">
-  						<iframe class="embed-responsive-item" src="..."></iframe>
+  						<iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=NiQZ9h77Cmo&"></iframe>
 					</div>
 
 				</div>
@@ -309,6 +309,11 @@
 				<P STYLE="text-align: center;">Samen met Michiel S. kregen ik de opdracht om de leerkrachten van de middelbare school bij te schaven in het gebruik van Evernote. Dit was heel erg leuk aangezien ik het platform zelf al gebruikte.</p>
 				</div>
 			</div>
+				<P STYLE="text-align: center;">
+					<div class="embed-responsive embed-responsive-16by9">
+  						<iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=NiQZ9h77Cmo&"></iframe>
+					</div>
+				</p>
 		</div>
 		<!-- section end -->
 
