--- a/index.html
+++ b/index.html
@@ -305,11 +305,11 @@
 				<P STYLE="text-align: center;">Samen met Michiel S. kregen ik de opdracht om de leerkrachten van de middelbare school bij te schaven in het gebruik van Evernote. Dit was heel erg leuk aangezien ik het platform zelf al gebruikte.</p>
 				</div>
 			</div>
-				<P STYLE="text-align: center;">
-					<div class="embed-responsive embed-responsive-16by9">
-  						<iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=NiQZ9h77Cmo&"></iframe>
-					</div>
-				</p>
+				<div class="col-md-12">
+				<iframe class="col-sm-12" height="333" frameborder="0" wmode="Opaque" allowfullscreen="" src="https://www.youtube.com/embed/NiQZ9h77Cmo&wmode=transparent">
+				</div>
+					
+				
 		</div>
 		<!-- section end -->
 
