--- a/index.html
+++ b/index.html
@@ -305,10 +305,11 @@
 				<P STYLE="text-align: center;">Samen met Michiel S. kregen ik de opdracht om de leerkrachten van de middelbare school bij te schaven in het gebruik van Evernote. Dit was heel erg leuk aangezien ik het platform zelf al gebruikte.</p>
 				</div>
 			</div>
+				<h1 class="text-center title">
 				<div class="col-sm-6">
 				<iframe class="col-sm-6" height="333" frameborder="0" wmode="Opaque" allowfullscreen="" src="https://www.youtube.com/embed/NiQZ9h77Cmo&wmode=transparent">
 				</div>
-					
+				</h1>
 				
 		</div>
 		<!-- section end -->
