--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 			</div>
 				<h1 class="text-center title">
 				<div class="col-sm-6">
-				<iframe class="col-sm-6" height="333" frameborder="0" wmode="Opaque" allowfullscreen="" src="https://www.youtube.com/embed/NiQZ9h77Cmo&wmode=transparent">
+				<iframe class="col-sm-6" height="333" frameborder="0" wmode="Opaque" allowfullscreen="" src="//www.youtube.com/embed/NiQZ9h77Cmo">
 				</div>
 				</h1>
 				
