--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 			</div>
 				<h1 class="text-center title">
 				<div class="col-sm-6">
-				<iframe class="col-sm-6" height="333" frameborder="0" wmode="Opaque" allowfullscreen="" src="//www.youtube.com/embed/NiQZ9h77Cmo">
+					<iframe width="560" height="315" src="//www.youtube.com/embed/NiQZ9h77Cmo" frameborder="0" allowfullscreen></iframe>
 				</div>
 				</h1>
 				
