--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 						<div class="col-md-8 col-md-offset-2 object-non-visible" data-animation-effect="fadeIn">
 							<p><h2 class="text-center">GIPblog <span>Laurens Theunis</span></h2></p>
 						<p class="lead text-center">Dit is de mijn GIP-blog. Hier kunt u al mijn GIP-taken en dergelijke terugvinden. Het was de bedoeling om een static site generator te gebruiken om deze website te creëren, maar aangezien ik me beter voel bij HTML/CSS heb ik deze dan toch maar gebruikt.</p>
-							<p class="lead text-center">Mijn naam is Laurens Theunis. Ik ben een student informatica-beheer op het Immaculata instituut te Oostmalle. Sinds mijn geboorte ben ik al bezig geweest met IT en alles wat hier mee te maken komt. Als u hier meer over wenst te lezen, kan ik u altijd verwijzen naar mij IT-autobiography.</p>
+							<p class="lead text-center">Mijn naam is Laurens Theunis. Ik ben een student informatica-beheer op het Immaculata instituut te Oostmalle. Sinds mijn geboorte ben ik al bezig geweest met IT en alles wat hier mee te maken komt. Als u hier meer over wenst te lezen, kan ik u altijd verwijzen naar mijn IT-autobiography.</p>
 							<p class="lead text-center">Ik hoop dat deze site mooi wordt opgevuld tot wat ik uiteindelijk met trots kan noemen, mijn website. In de toekomst zou ik graag willen verder groeien in de ICT-sector, met softwareontwikkeling op het oog. Ik heb nog een lange afstand af te leggen, maar elke tocht begint met een kleine stap.</p>
 						</div>
 					</div>
