--- a/index.html
+++ b/index.html
@@ -298,11 +298,11 @@
 				</div>
 				<div class="col-sm-4">
 				<P STYLE="text-align: center;"><h3>Lagere school</h3></p>
-				<P STYLE="text-align: center;">Samen met Ward A. kregen we de opdracht om de leerkrachten van de lagere school bij te schaven in het gebruik van het Smartboard. Dit werd meteen al een heel erg uitdagende opdracht aangezien we zelf niet beschikte over het soort Smartboards die men gebruikten.</p>
+				<P STYLE="text-align: center;">Samen met <a href="http://wardadriaensen.github.io/home/">Ward</a> kregen we de opdracht om de leerkrachten van de lagere school bij te schaven in het gebruik van het Smartboard. Dit werd meteen al een heel erg uitdagende opdracht aangezien we zelf niet beschikte over het soort Smartboards die men gebruikten.</p>
 				</div>
 				<div class="col-sm-4">
 				<P STYLE="text-align: center;"><h3>Inleiding</h3></p>
-				<P STYLE="text-align: center;">Samen met Michiel S. kregen ik de opdracht om de leerkrachten van de middelbare school bij te schaven in het gebruik van Evernote. Dit was heel erg leuk aangezien ik het platform zelf al gebruikte.</p>
+				<P STYLE="text-align: center;">Samen met <a href="http://michielsegers.github.io/">Michiel</a>kregen we de opdracht om de leerkrachten van de middelbare school bij te schaven in het gebruik van Evernote. Dit was heel erg leuk aangezien ik het platform zelf al gebruikte.</p>
 				</div>
 			</div>
 				
